fix: fix create body
